# dqmc

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  fpm.toml
ckb/: 2chain.py  2dhatanockb.py  ckb.py  square.py  squareckb.py
ckb_python/: ckb.py  ckb.txt  ckbtest.py  squareckb.py
dqmc/: ._main.f90  ._qr_mod.f90  Makefile  abc.txt  asvqrd_mod.f90  bmult_mod.f90  checkerboard_mod.f90  checkerboardtest.f90  checkerboardtests_mod.f90  ckb.txt  convenientla_mod.f90  customla_mod.f90  customlatest.f90  customlatests_mod.f90  equalgreens_mod.f90  equalgreens_mod_fast.f90  equalgreens_mod_slow.f90  expm_mod.f90  hatanockb.txt  input.txt  la_mod.f90  main  main.f90  main.txt  main2.txt  measurements_mod.f90  metropolisratios_mod.f90  numbertypes.f90  options.txt  polarization_mod.f90  printing_mod.f90  qr_mod.f90  readinputfile_mod.f90  simulate_mod.f90  simulationsetup_mod.f90  squareckb.txt  statistics_mod.f90  test.f90
dqmc/checkerboardtest.out.dSYM/Contents/: Info.plist
dqmc/customlatest.out.dSYM/Contents/: Info.plist
dqmc/testing/: bmultexact_mod.f90  delta00.txt  delta00out.txt  delta01out.txt  delta02.txt  delta03.txt  delta04.txt  delta05.txt  delta06.txt  delta07.txt  delta08.txt  delta09.txt  ex33.mtx  input.txt  qrrandom.f90  randomqr.f90  test.f90  test2.f90  test3.f90  test5.f90  tmatrix.py
inputoutput/: makeinput.py  ofile.py  readoutputs.py
inputoutput/x8y8/: ifile.py  makeinput.py
old/: 2dhatanockb.py  Makefile  asvqrd_mod.f90  asvqrdgreens_mod.f90  checkerboardtest.f90  equalgreens_mod.f90  readme.md
python_tests/: asvqrd.py  bmult.py  checkerboard.py  ckb.txt  equalgreens.py  metropolis.py  simulationsetup.py  test.py  test2.py  test3.py  test4.py
src/: CMakeLists.txt
src/executables/: CMakeLists.txt  input.txt  main.f90
src/modules/: CMakeLists.txt  blas_interface_mod.f90  bmult_mod.f90  checkerboard_mod.f90  convenientla_mod.f90  customla_mod.f90  equalgreens_mod.f90  expm_mod.f90  lapack_interface_mod.f90  measurements_mod.f90  metropolisratios_mod.f90  numbertypes.f90  polarization_mod.f90  printing_mod.f90  readinputfile_mod.f90  simulate_mod.f90  simulationsetup_mod.f90  statistics_mod.f90  stduse.f90  utilities_mod.f90
testing/: ._qrrandom.f90  ckbtest.f90  hatano2chainckb.py  la_mod.f90  latest.f90  qr_mod.f90  readme.md  test4.f90  test6.f90
